synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -194,28 +194,27 @@ ABOUT_LICENSE_TIP=Mostrar o Acordo de Licença deste Software
 ABOUT_SCROLL_CHECK_BOX_LABEL=Deslocar Automaticamente
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Fechar Esta Janela
-#### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world.  The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant.  The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
+#### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world. The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant. The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
 ABOUT_INTRODUCTION=Inspirado por Mark Gorton, proprietário do LimeWire, este projecto é um esforço <a href="http://www.limewire.org/"> de fonte aberta colaborativo </a> que envolve programadores e investigadores em todo o mundo. A natureza colaborativa do Gnutella também está patente no Gnutella Developers Forum (GDF), em que a LimeWire participa. Os membros do GDF trabalham arduamente, todos os dias, para tornar o Gnutella num conjunto de protocolos verdadeiramente inovador, que melhora constantemente - um testemunho da força dos protocolos e padrões abertos.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
 ABOUT_DEV_BLURB=O LimeWire também resulta, obviamente, de um número infindável de horas de trabalho dos developers da LimeWire:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
 ABOUT_BIZDEV_BLURB=As estratégia de negócio de bastidores e o expediente diário são da responsabilidade dos developers de negócios da LimeWire:
-#### ABOUT_WEBDEV_BLURB=The LimeWire <a href="http://www.limewire.com/">web site</a> and LimeWire graphic design are the hard work of LimeWire's web team: 
+#### ABOUT_WEBDEV_BLURB=The LimeWire <a href="http://www.limewire.com/">web site</a> and LimeWire graphic design are the hard work of LimeWire's web team:
 ABOUT_WEBDEV_BLURB=O <a href="http://www.limewire.com/">site</a> da LimeWire e o design gráfico do LimeWire resultam do trabalho árduo da equipa web da LimeWire: 
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
-
 ABOUT_SUPPORT_BLURB=As questões referentes ao LimeWire PRO são obrigatoriamente respondidas pelo suporte técnico da LimeWire:
 #### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
 ABOUT_PREVIOUS_DEV_BLURB=Por outro lado, os developers referidos a seguir já fizeram parte da equipa LimeWire embora, presentemente, estejam a trabalhar noutros projectos:
-#### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well.  Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
+#### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well. Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
 ABOUT_CONTRIBUTORS_BLURB=Todos aqueles que contribuíram para a fonte aberta do LimeWire também forneceram um número importante de códigos, muitas correcções de erros, ideias, investigação, etc. Os indivíduos referidos a seguir contribuíram com códigos, que são distribuídos com todas as versões do LimeWire, e/ou identificaram erros importantes no código:
 #### ABOUT_I18N_BLURB=LimeWire would also like to thank the many contributors to the internationalization project, both for the application itself and for the LimeWire web site.
 ABOUT_I18N_BLURB=A LimeWire também gostaria de agradecer às inúmeras pessoas que contribuíram para internacionalizar o projecto, tanto no que respeita à própria aplicação como ao site da LimeWire.
-#### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks.  These include:
+#### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks. These include:
 ABOUT_COMMUNITY_BLURB=Entre os colegas da comunidade Gnutella que merecem uma agradecimento especial, poderemos referir:
-#### ABOUT_CONCLUSION=Finally, LimeWire would like to extend its sincere thanks to these developers, users, and all others who have contributed their ideas to the project.  Without LimeWire users, the LimeWire network would not exist.
+#### ABOUT_CONCLUSION=Finally, LimeWire would like to extend its sincere thanks to these developers, users, and all others who have contributed their ideas to the project. Without LimeWire users, the LimeWire network would not exist.
 ABOUT_CONCLUSION=Por último, a LimeWire gostaria de endereçar os seus sinceros agradecimentos aos developers, utilizadores, e a todos os que contribuíram para o projecto com as suas ideias. Sem os utilizadores LimeWire, a rede LimeWire nunca existiria.
- 
+
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
 ###################################################################
@@ -303,7 +302,7 @@ MENU_FILE_TITLE=Ficheiro
 MENU_FILE_TITLE_MNEMONIC=F
 #### MENU_FILE_CLOSE=Close
 MENU_FILE_CLOSE=Fechar
-#### MENU_FILE_CLOSE_MNEMONIC=H
+#### MENU_FILE_CLOSE_MNEMONIC=C
 MENU_FILE_CLOSE_MNEMONIC=H
 #### MENU_FILE_CLOSE_ACCESSIBLE=Close the Program
 MENU_FILE_CLOSE_ACCESSIBLE=Fechar o Programa
@@ -311,7 +310,6 @@ MENU_FILE_CLOSE_ACCESSIBLE=Fechar o Programa
 MENU_FILE_QUIT=Sair
 #### MENU_FILE_QUIT_MNEMONIC=Q
 MENU_FILE_QUIT_MNEMONIC=R
-
 #### MENU_FILE_CONNECT=Connect
 MENU_FILE_CONNECT=Ligar
 #### MENU_FILE_CONNECT_MNEMONIC=O
@@ -333,7 +331,6 @@ MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Adicionar uma pasta à pasta da bibliotec
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Folder
 MENU_FILE_LIBRARY_UNSHARE_FOLDER=Deixar de partilhar pasta
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=P
-
 MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=I
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Folder
 MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Deixar de partilhar a pasta da biblioteca seleccionada.
@@ -603,7 +600,7 @@ TABLES_DISPLAY_TOOLTIPS=Sugestões detalhadas
 # Key/value pairs for SearchView stuff
 ################################################################################
 #### SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu. Your search may not return any results until you connect.
-SEARCH_NOT_CONNECTED=Não está ligado à rede. Para ligar, seleccione “Ligar” do menu “Ficheiro”. A sua pesquisa poderá não apresentar resultados antes de ligar à rede.
+SEARCH_NOT_CONNECTED=Não está ligado à rede. Para ligar, seleccione \u0093Ligar\u0094 do menu \u0093Ficheiro\u0094. A sua pesquisa poderá não apresentar resultados antes de ligar à rede.
 #### SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_STILL_CONNECTING=O LimeWire está a ligar à rede. A sua pesquisa poderá não apresentar resultados antes de estar correctamente ligado à rede.
 #### SEARCH_DOWNLOAD_BUTTON_LABEL=Download
@@ -611,11 +608,11 @@ SEARCH_DOWNLOAD_BUTTON_LABEL=Download
 #### SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
 SEARCH_DOWNLOAD_BUTTON_TIP=Efectuar o download de todos os ficheiros seleccionados
 #### SEARCH_DOWNLOAD_AS_LABEL=Download As...
-SEARCH_DOWNLOAD_AS_LABEL=Efectuar o download como…
+SEARCH_DOWNLOAD_AS_LABEL=Efectuar o download como\u0085
 #### SEARCH_WISHLIST_BUTTON_LABEL=Add To Wishlist
 SEARCH_WISHLIST_BUTTON_LABEL=Adicionar à lista de desejos
 #### SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
-SEARCH_WISHLIST_BUTTON_TIP=Criar um “Robot LimeWire” para procurar o conteúdo
+SEARCH_WISHLIST_BUTTON_TIP=Criar um \u0093Robot LimeWire\u0094 para procurar o conteúdo
 #### SEARCH_BROWSE_HOST_BUTTON_LABEL=Browse Host
 SEARCH_BROWSE_HOST_BUTTON_LABEL=Procurar no anfitrião
 #### SEARCH_BROWSE_HOST_BUTTON_TIP=View All Files on Selected Computer
@@ -689,7 +686,7 @@ SEARCH_TYPE_BROWSEHOST=Ligação directa
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_TITLE=Tem amigos?
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
-SEARCH_BROWSEHOST_DESC=Introduza o endereço IP de um amigo ao qual se pretenda ligar, faça clique em “Ligação directa” e o LimeWire vai tentar procurar nos ficheiros desse utilizador.
+SEARCH_BROWSEHOST_DESC=Introduza o endereço IP de um amigo ao qual se pretenda ligar, faça clique em \u0093Ligação directa\u0094 e o LimeWire vai tentar procurar nos ficheiros desse utilizador.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
 SEARCH_BROWSEHOST_MYIP=Quando os seus amigos se quiserem ligar a si devem introduzir
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
@@ -883,7 +880,6 @@ LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=Pode configurar as pastas que partilhou n
 LIBRARY_SHARED_FILES_CONFIGURE=Configurar...
 #### LIBRARY_SHARED_FILES_CONFIGURE_MENU=Configure Sharing Options
 LIBRARY_SHARED_FILES_CONFIGURE_MENU=Configuar opções de partilha
-
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Abrir...
@@ -1186,6 +1182,12 @@ DOWNLOAD_STATUS_PAUSING=A efectuar pausa...
 DOWNLOAD_STATUS_PAUSED=Em pausa
 #### DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 DOWNLOAD_AWAITING_SOURCES=Poderá ser necessária uma pesquisa mais específica...
+# {0} the name of the skin
+# {1} the localized name of the menu item "Refresh Skins"
+# {2} the localized name of the "View" menu
+# {3} the localized name of the "Apply Skins" menu
+#### DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=You have downloaded a skin titled "{0}", you can activate the new skin by clicking "{1}" in the "{2}"->"{3}" menu and then selecting it from the list of available skins.
+#? DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=
 #### DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_START=Efectuou o download de uma nova máscara designada por "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
@@ -1932,23 +1934,23 @@ SHUTDOWN_WAIT=Aguarde enquanto o LimeWire é encerrado...
 ##################################################################
 #### SUPPORT_LIMEWIRE_01=For Turbo-Charged searches get LimeWire PRO.
 SUPPORT_LIMEWIRE_01=Para pesquisas à Velocidade Tubo, adquira o LimeWire PRO.
-#### SUPPORT_LIMEWIRE_02=Support LimeWire's peer-to-peer development.  Get PRO.
+#### SUPPORT_LIMEWIRE_02=Support LimeWire's peer-to-peer development. Get PRO.
 SUPPORT_LIMEWIRE_02=Apoie o desenvolvimento unidade a unidade do LimeWire. Adquira a versão PRO.
 #### SUPPORT_LIMEWIRE_03=Purchase LimeWire PRO to help us make downloads faster.
 SUPPORT_LIMEWIRE_03=Adquira o LimeWire PRO para nos ajudar a tornar os downloads mais rápidos.
 #### SUPPORT_LIMEWIRE_04=For Turbo-Charged downloads get LimeWire PRO.
 SUPPORT_LIMEWIRE_04=Para downloads à Velocidade Turbo adquira o LimeWire PRO.
-#### SUPPORT_LIMEWIRE_05=Support open networks.  Get LimeWire PRO.
+#### SUPPORT_LIMEWIRE_05=Support open networks. Get LimeWire PRO.
 SUPPORT_LIMEWIRE_05=Apoie as redes abertas.  Adquira o LimeWire PRO.
-#### SUPPORT_LIMEWIRE_06=Support open source and open protocols.  Get LimeWire PRO.
+#### SUPPORT_LIMEWIRE_06=Support open source and open protocols. Get LimeWire PRO.
 SUPPORT_LIMEWIRE_06=Apoie a fonte aberta e os protocolos abertos.  Adquira o LimeWire PRO.
 #### SUPPORT_LIMEWIRE_07=For Turbo-Charged performance get LimeWire PRO.
 SUPPORT_LIMEWIRE_07=Para um desempenho à Velocidade Turbo, adquira o LimeWire PRO.
-#### SUPPORT_LIMEWIRE_08=Keep the Internet open.  Get LimeWire PRO.
+#### SUPPORT_LIMEWIRE_08=Keep the Internet open. Get LimeWire PRO.
 SUPPORT_LIMEWIRE_08=Mantenha a Internet aberta.  Adquira o LimeWire PRO.
-#### SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money.  Get PRO.
+#### SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money. Get PRO.
 SUPPORT_LIMEWIRE_09=O desenvolvimento do LimeWire custa dinheiro.  Adquira a versão PRO.
-#### SUPPORT_LIMEWIRE_11=Support LimeWire and independent media content.  Get PRO.
+#### SUPPORT_LIMEWIRE_11=Support LimeWire and independent media content. Get PRO.
 SUPPORT_LIMEWIRE_11=Apoie o LimeWire e o conteúdo de media independente.  Adquira a versão PRO.
 
 ################################################################################
@@ -1967,7 +1969,7 @@ UPDATE_LATER_LABEL=Actualizar mais tarte
 UPDATE_NOW_LABEL=Actualizar agora
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
 UPDATE_TIP=Visite a página http://www.limewire.com para actualizar!
-#### UPDATE_RESTART=LimeWire needs to be restarted to install the update.  If you choose not to update now, LimeWire will update automatically when you close.  Would you like to update now?
+#### UPDATE_RESTART=LimeWire needs to be restarted to install the update. If you choose not to update now, LimeWire will update automatically when you close. Would you like to update now?
 UPDATE_RESTART=O LimeWire necessita de ser reiniciado para instalar a actualização.  Se optar por não efectuar a actualização neste momento, o LimeWire será actualizado automaticamente quando fechar o programa.  Deseja actualizar agora?
 #### UPDATE_RESTART_TITLE=Update Ready
 UPDATE_RESTART_TITLE=Actualização Preparada
@@ -2044,7 +2046,7 @@ NO_INTERNET=A sua máquina não parece possuir uma ligação à Internet activa, ou e
 # keep trying.
 ################################################################################
 #### NO_INTERNET_RETRYING=Your machine does not appear to have an active Internet connection or a firewall is blocking LimeWire from accessing the internet. LimeWire will automatically keep trying to connect you to the network unless you select "Disconnect" from the File menu.
-NO_INTERNET_RETRYING=A sua máquina não parece possuir uma ligação à Internet activa, ou existe um firewall the está a bloquear o acesso do LimeWire à Internet. O LimeWire vair continuara a tentar ligar à rede automaticamente, a não ser que seleccione “Deligar” no menu Ficheiro.
+NO_INTERNET_RETRYING=A sua máquina não parece possuir uma ligação à Internet activa, ou existe um firewall the está a bloquear o acesso do LimeWire à Internet. O LimeWire vair continuara a tentar ligar à rede automaticamente, a não ser que seleccione \u0093Deligar\u0094 no menu Ficheiro.
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire is trying to connect
@@ -3771,7 +3773,7 @@ STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Enviada
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas as consultas foram encaminhadas para outros Ultrapeers do último hop, utilizando tabelas de encaminhamento de consulta.
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Não enviada
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=Not Sent
+#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=Não enviada
 
 # leaf-specific sent stats
@@ -4126,6 +4128,8 @@ ERROR_VENDOR_INVALID_VERSION=Versão inválida
 ERROR_VENDOR_INVALID_PAYLOAD=Payload inválido
 #### ERROR_VENDOR_UNRECOGNIZED=Unrecognized Vendor Message
 ERROR_VENDOR_UNRECOGNIZED=Mensagem de fornecedor irreconhecida
+#### ERROR_STARTUP_WINDOWS_COMPATIBILITY=LimeWire has encountered a problem during startup and cannot proceed. You may be able to fix this problem by changing LimeWire's Windows Compatibility. Right-click on the LimeWire icon on your Desktop and select 'Properties' from the popup menu. Click the 'Compatibility' tab at the top, then click the 'Run this program in compatibility mode for' check box, and then select 'Windows 2000' in the box below the check box. Then click the 'OK' button at the bottom and restart LimeWire.
+#? ERROR_STARTUP_WINDOWS_COMPATIBILITY=
 
 ###############################################################################
 # Key/value pairs for general message labels
@@ -4464,4 +4468,3 @@ ALL_OOB_BYPASSED=Respostas ignoradas
 STATS_OOB_THROUGHPUT_TITLE=Taxa de sucesso OOB
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Número de respostas pedidas e recebidas através do protocolo OOB
-
