typos, my name at the top

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1,7 +1,7 @@
 #################################################################################
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Spanish (Castillian) - Spain
-# Thanks to: Thinkdiff. Localization English->Spanish by Ability Top Translations www.localization-translation.com
+# Thanks to: Thinkdiff. Localization English->Spanish by Ability Top Translations www.localization-translation.com, Currently Maintained by Angel Leon 
 ################################################################################
 LOCALE_LANGUAGE_CODE=es
 LOCALE_LANGUAGE_NAME=Español
@@ -195,7 +195,7 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Avanzar automáticamente
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Cerrar la ventana Acerca de.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world. The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant. The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-ABOUT_INTRODUCTION=Inspiradopor el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamento del poder de los protocolos abiertos y de los estándares abiertos.
+ABOUT_INTRODUCTION=Inspirado por el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamento del poder de los protocolos abiertos y de los estándares abiertos.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
 ABOUT_DEV_BLURB=LimeWire es tambien, por supuesto, el resultado de incontables horas de trabajo del equipo de desarrolladores de LimeWire:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
@@ -4349,7 +4349,7 @@ UPLOAD_STAT_MALFORMED_REQUEST=Pedido mal formulado
 #### UPLOAD_STAT_LIMIT_REACHED=Limit Reached
 UPLOAD_STAT_LIMIT_REACHED=Límite alcanzado
 #### UPLOAD_STAT_LIMIT_REACHED_GREEDY=Greedy Request
-UPLOAD_STAT_LIMIT_REACHED_GREEDY=Pedido ávido
+UPLOAD_STAT_LIMIT_REACHED_GREEDY=Pedido Egoista
 #### UPLOAD_STAT_BANNED=Banned Client
 UPLOAD_STAT_BANNED=Cliente prohibido
 #### UPLOAD_STAT_UNAVAILABLE_RANGE=Unavailable Range
