--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.9.11
 # Specialization for: German - Germany
 # Revision by Ralf Peter Bosse, additions by Marco & Frank Ebert, Jens-Uwe Mager, Gregorio Roper
 ################################################################################
@@ -1187,7 +1187,7 @@ DOWNLOAD_AWAITING_SOURCES=Eine detalliertere Suche könnte erforderlich sein...
 # {2} the localized name of the "View" menu
 # {3} the localized name of the "Apply Skins" menu
 #### DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=You have downloaded a skin titled "{0}", you can activate the new skin by clicking "{1}" in the "{2}"->"{3}" menu and then selecting it from the list of available skins.
-#? DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=
+DOWNLOAD_EXPLAIN_HOW_TO_CHANGE_THEME=Sie haben ein neues Motiv mit dem Titel "{0}". Um dieses Motiv zu aktievieren, klicken Sie "{1}" aus dem "{2}"->"{3}" Menü, und auswählen Sie es in der verfügbar Liste.
 #### DOWNLOAD_APPLY_NEW_THEME_START=You have downloaded a new skin titled "
 DOWNLOAD_APPLY_NEW_THEME_START=Sie haben ein neues Motiv mit dem Titel "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
