--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.9.11
 # Specialization for: Finnish - Finland
 # Thanks to Iku.
 ################################################################################
@@ -83,7 +83,7 @@ GENERAL_BROWSE_HOST_LABEL=Selaa palvelinta
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=Selaa kaikkia tiedostoja valitulla koneella
 #### GENERAL_ADVANCED_SUB_MENU=Advanced
-#? GENERAL_ADVANCED_SUB_MENU=
+GENERAL_ADVANCED_SUB_MENU=Lisäasetukset
 
 ################################################################################
 # Key/value pairs for right-click context menus.
@@ -195,25 +195,25 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Automaatti juoksutus
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Sulje Tietoja ikkuna.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world. The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant. The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-#? ABOUT_INTRODUCTION=
+ABOUT_INTRODUCTION=Inspiroijana LimeWiren omistaja, Mark Gorton, LimeWire projekti on yhteinen <a href="http://www.limewire.org/">vapaan koodin hanke</a> jossa on mukana ohjelmoijia ja tutkijoita ympäri maailman. Gnutellan yhteistyö luonne heijastuu myös Gnutella Developers Forumissa (GDF), missä LimeWire on myös jäsenenä. GDF:n jäsenet työskentelevät yhteistyössä joka päivä, tehdäkseen Gnutellasta todellisen koko ajan parantuvan kokoelman protokollia -- todellisen avoimien protokollien ja avoimen ohjelmistojen testamentin.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
-#? ABOUT_DEV_BLURB=
+ABOUT_DEV_BLURB=LimeWire on myöskin, totta kai, lukemattomien ohjelmointi työtuntien saavutus, näitä LimeWire ohjelmoijia ovat seuraavat:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
 #? ABOUT_BIZDEV_BLURB=
 #### ABOUT_WEBDEV_BLURB=The LimeWire <a href="http://www.limewire.com/">web site</a> and LimeWire graphic design are the hard work of LimeWire's web team:
-#? ABOUT_WEBDEV_BLURB=
+ABOUT_WEBDEV_BLURB=LimeWire <a href="http://www.limewire.com/">web-sivusto</a> ja LimeWiren grafiikka ovat Limewire web team käden jälkeä:
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
-#? ABOUT_SUPPORT_BLURB=
+ABOUT_SUPPORT_BLURB=LimeWire technical support vastaa ahkerasti kaikkiin LimeWire Pro tukipyyntöihin:
 #### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
-#? ABOUT_PREVIOUS_DEV_BLURB=
+ABOUT_PREVIOUS_DEV_BLURB=Lisäksi seuraavat suunnittelijat ovat työskennelleet LimeWire teamissä aikaisemmin, mutta ovat siirtyneet toisiin projekteihin:
 #### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well. Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
-#? ABOUT_CONTRIBUTORS_BLURB=
+ABOUT_CONTRIBUTORS_BLURB=LimeWiren vapaan koodin osallistujat ovat kirjoittaneet huomattavan osan koodia ja monia bugi-korjauksia, ideoita, tutkimusta jne. Allalistatut henkilöt ovat kirjoittaneet koodia joka on jokaisessa Limewire versiossa tai ovat korjanneet vakavia virheitä tai sekä että:
 #### ABOUT_I18N_BLURB=LimeWire would also like to thank the many contributors to the internationalization project, both for the application itself and for the LimeWire web site.
-#? ABOUT_I18N_BLURB=
+ABOUT_I18N_BLURB=LimeWire haluaa myöskin kiittää niitä useita henkilöitä jotka ovat osallistuneet projektin käännöstyöhön niin ohjelman itsensä kuin LimeWiren web-sivuston osalta.
 #### ABOUT_COMMUNITY_BLURB=Several colleagues in the Gnutella community merit special thanks. These include:
-#? ABOUT_COMMUNITY_BLURB=
+ABOUT_COMMUNITY_BLURB=Näiden osallistujien lisäksi seuraavat kollegat Gnutella yhteisössä ovat ansainneet erikoiskiitoksen. Heitä ovat seuraavat:
 #### ABOUT_CONCLUSION=Finally, LimeWire would like to extend its sincere thanks to these developers, users, and all others who have contributed their ideas to the project. Without LimeWire users, the LimeWire network would not exist.
-#? ABOUT_CONCLUSION=
+ABOUT_CONCLUSION=LimeWire haluaisi laajentaa kiitoksensa kaikille niille ohjelmoijille ja muillekin jotka ovat antaneet ideoitaan projektille. Lopuksi, LimeWire haluaa kiittää niitä useita LimeWire käyttäjiä, joita ilman LimeWire verkostoa ei olisi.
 
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
@@ -411,7 +411,7 @@ MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
 #### MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show Text Below Icons
 MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Näytä teksti kuvakkeiden alla.
 #### MENU_VIEW_SHOW_HIDE_TITLE=Show/Hide
-MENU_VIEW_SHOW_HIDE_TITLE=Näytä ikkuna
+MENU_VIEW_SHOW_HIDE_TITLE=Näytä/ikkuna
 #### MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
 MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=N
 #### MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or Hide individual tabs
@@ -572,7 +572,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generoi popup virhe testausta varten.
 # Key/value pairs for status bar components and right-click menu
 ################################################################################
 #### STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
-#? STATUS_BAR_SHOW_CONNECTION_QUALITY=
+STATUS_BAR_SHOW_CONNECTION_QUALITY=Näytä yhteydet laatu 
 #### STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 #? STATUS_BAR_SHOW_SHARED_FILES_COUNT=
 #### STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
@@ -580,7 +580,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generoi popup virhe testausta varten.
 #### STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
 #? STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=
 #### STATUS_BAR_SHOW_MEDIA_PLAYER=Show Media Player
-#? STATUS_BAR_SHOW_MEDIA_PLAYER=
+STATUS_BAR_SHOW_MEDIA_PLAYER=Näytä media soitin
 #### STATUS_BAR_FIREWALL_FOUND_TOOLTIP=LimeWire has detected a firewall
 #? STATUS_BAR_FIREWALL_FOUND_TOOLTIP=
 #### STATUS_BAR_FIREWALL_NOT_FOUND_TOOLTIP=LimeWire has not detected a firewall
@@ -608,7 +608,7 @@ SEARCH_DOWNLOAD_BUTTON_LABEL=Lataa
 #### SEARCH_DOWNLOAD_BUTTON_TIP=Download All Selected Files
 SEARCH_DOWNLOAD_BUTTON_TIP=Lataa valitut tiedostot.
 #### SEARCH_DOWNLOAD_AS_LABEL=Download As...
-#? SEARCH_DOWNLOAD_AS_LABEL=
+SEARCH_DOWNLOAD_AS_LABEL=Lataa...
 #### SEARCH_WISHLIST_BUTTON_LABEL=Add To Wishlist
 SEARCH_WISHLIST_BUTTON_LABEL=Lisää toivumuslistalle
 #### SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
@@ -670,7 +670,7 @@ SEARCH_SHOW_MESSAGE_MSG=Älä näytä tätä viestiä enää
 #### SEARCH_DOWNLOAD_DIALOG_CONFIRM=Download Request
 SEARCH_DOWNLOAD_DIALOG_CONFIRM=Lataus pyyntö
 #### SEARCH_DEFAULT_FIELD_TITLE=Filename
-SEARCH_DEFAULT_FIELD_TITLE=tiedostonimi
+SEARCH_DEFAULT_FIELD_TITLE=Tiedostonimi
 #### SEARCH_MULTIPLE_HOSTS=Multiple
 SEARCH_MULTIPLE_HOSTS=Useita
 #### AUTO_DL_CHECKBOX_STRING=Automatically Download
@@ -900,7 +900,7 @@ PLAYLIST_FILE_DESCRIPTION=Soittolista tiedostot (*.m3u)
 # Key/value pairs for the integrated media player
 ################################################################################
 #### MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Player
-MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Soitin
+MEDIA_PLAYER_DEFAULT_STRING=LimeWire media soitin
 #### MEDIA_PLAY_BUTTON_TIP=Play
 MEDIA_PLAY_BUTTON_TIP=Soita
 #### MEDIA_PAUSE_BUTTON_TIP=Pause
@@ -933,15 +933,15 @@ PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Salasana
 #? DOWNLOADER_DIALOG_OVERWRITE_ACTION_SHORT_DESCRIPTION=
 # {0} a short error message which is localized independently
 #### DOWNLOADER_DIALOG_ERROR_LABEL=Error: {0}
-#? DOWNLOADER_DIALOG_ERROR_LABEL=
+DOWNLOADER_DIALOG_ERROR_LABEL=Virhe: {0}
 # {0} a short warning message which is localized independently
 #### DOWNLOADER_DIALOG_WARNING_LABEL=Warning: {0}
-#? DOWNLOADER_DIALOG_WARNING_LABEL=
+DOWNLOADER_DIALOG_WARNING_LABEL=Varoitus: {0}
 # {0} the full path name of the file in question
 #### DOWNLOADER_DIALOG_NOTE_LABEL=<b>Note</b>: A file with the same content already exists in the library at {0}
 #? DOWNLOADER_DIALOG_NOTE_LABEL=
 #### NO_FILENAME_LABEL=No Filename
-#? NO_FILENAME_LABEL=
+NO_FILENAME_LABEL=Ei tiedostonimiä
 
 ################################################################################
 # Key/value pair for download location dialog
@@ -949,7 +949,7 @@ PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Salasana
 #### DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
 #? DOWNLOAD_LOCATION_DIALOG_TITLE=
 #### DIRECTORY_CHOOSER_FILE_DESCRIPTION=All Folders
-#? DIRECTORY_CHOOSER_FILE_DESCRIPTION=
+DIRECTORY_CHOOSER_FILE_DESCRIPTION=Kaikki hakemistot
 
 ################################################################################
 # Key/value pair for save location error states
@@ -1051,11 +1051,11 @@ PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Salasana
 #### STATISTICS_AVAILABLE=available
 STATISTICS_AVAILABLE=saatavilla
 #### STATISTICS_FILES=Files
-STATISTICS_FILES=tiedostoa
+STATISTICS_FILES=Tiedostoa
 #### STATISTICS_FILES_TOOLTIP=files
-#? STATISTICS_FILES_TOOLTIP=
+STATISTICS_FILES_TOOLTIP=tiedostoa
 #### STATISTICS_FILES_TOOLTIP_PENDING=files (Loading...)
-#? STATISTICS_FILES_TOOLTIP_PENDING=
+STATISTICS_FILES_TOOLTIP_PENDING=Tiedostoa (lataan...)
 #### STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_DISCONNECTED=Ei yhteyttä / ei tiedostoja saatavilla
 #### STATISTICS_SHARING_TOOLTIP=You are sharing
@@ -1434,7 +1434,7 @@ LIBRARY_TABLE_LICENSE=Lisenssi
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Jaot
 #### LIBRARY_TABLE_SEARCH_POPUP_MENU=Search
-#? LIBRARY_TABLE_SEARCH_POPUP_MENU=
+LIBRARY_TABLE_SEARCH_POPUP_MENU=Etsi
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_NEW_FOLDER_LABEL=Uusi hakemisto
 #### LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
@@ -1982,7 +1982,7 @@ MESSAGE_CAPTION=Viesti
 #### MESSAGE_ERROR_CAPTION=Error
 MESSAGE_ERROR_CAPTION=Virhe
 #### MESSAGE_WARNING_CAPTION=Warning
-#? MESSAGE_WARNING_CAPTION=
+MESSAGE_WARNING_CAPTION=Varoitus
 #### MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
 MESSAGE_SHARE_SAVE_DIR=Haluatko lisätä hakemiston jaettujen hakemistojen listaan? Alihakemistot jaetaan myös.
 #### MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
@@ -2664,7 +2664,7 @@ OPTIONS_CHAT_ACTIVE_LABEL=Voit sallia tai estää Chat toiminnot.
 # Key/Value pairs for the player options in the options window
 ################################################################################
 #### OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Use LimeWire Media Player:
-OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Käytä LimeWire MP3 Soitinta:
+OPTIONS_PLAYER_ACTIVE_CHECK_BOX_LABEL=Käytä LimeWire MP3 soitinta:
 #### OPTIONS_PLAYER_PREFERENCE_TITLE=Player Options
 OPTIONS_PLAYER_PREFERENCE_TITLE=Soitin asetukset
 #### OPTIONS_PLAYER_PREFERENCE_LABEL=You can choose to play media with LimeWire or your system's default player. The media player and playlist will appear only if this option is set. A restart will be required when enabling or disabling the media controls.
