--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.9.11
 # Specialization for: Russian - Russia
 # Thanks to Eugene Romanenko (eros2 AT os2.ru)
 ################################################################################
@@ -732,7 +732,7 @@ MAGNET_COPY_MAGNET_LINKS_LABEL=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\
 #### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
 MAGNET_COPY_MAGNET_LINKS_TOOLTIP=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c Magnet-\u0441\u0441\u044b\u043b\u043a\u0438 \u0434\u043b\u044f \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432 \u0432 \u0431\u0443\u0444\u0435\u0440 \u043e\u0431\u043c\u0435\u043d\u0430
 #### MAGNET_COPY_MAGNET_LINKS_WARNING=One or more of the created magnet links may not be accessible since their hosts are firewalled.
-MAGNET_COPY_MAGNET_LINKS_WARNING=\u041d\u0435\u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u0438\u0437 \u0441\u043e\u0437\u0434\u0430\u043d\u043d\u044b\u0445 magnet-\u0441\u0441\u044b\u043b\u043e\u043a \u043c\u043e\u0433\u0443\u0442 \u0431\u044b\u0442\u044c \u043d\u0435\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b, \u0442.\u043a. \u0438\u0445 \u0445\u043e\u0441\u0442\u044b \u0437\u0430\u043a\u0440\u044b\u0442\u044b \u0444\u0430\u0439\u0440\u0432\u043e\u043b\u043b\u043e\u043c. 
+MAGNET_COPY_MAGNET_LINKS_WARNING=\u041d\u0435\u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u0438\u0437 \u0441\u043e\u0437\u0434\u0430\u043d\u043d\u044b\u0445 magnet-\u0441\u0441\u044b\u043b\u043e\u043a \u043c\u043e\u0433\u0443\u0442 \u0431\u044b\u0442\u044c \u043d\u0435\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b, \u0442.\u043a. \u0438\u0445 \u0445\u043e\u0441\u0442\u044b \u0437\u0430\u043a\u0440\u044b\u0442\u044b \u0444\u0430\u0439\u0440\u0432\u043e\u043b\u043b\u043e\u043c.
 
 ################################################################################
 # Search actions
@@ -1051,15 +1051,15 @@ SHARE_FILE_ALREADY_SHARED=\u0414\u043e\u0441\u0442\u0443\u043f \u043a \u0444\u04
 #### STATISTICS_AVAILABLE=available
 STATISTICS_AVAILABLE=\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u043e
 #### STATISTICS_FILES=Files
-STATISTICS_FILES=\u0444\u0430\u0439\u043b\u043e\u0432
+STATISTICS_FILES=\u0424\u0430\u0439\u043b\u043e\u0432
 #### STATISTICS_FILES_TOOLTIP=files
-#? STATISTICS_FILES_TOOLTIP=
+STATISTICS_FILES_TOOLTIP=\u0444\u0430\u0439\u043b\u043e\u0432
 #### STATISTICS_FILES_TOOLTIP_PENDING=files (Loading...)
-#? STATISTICS_FILES_TOOLTIP_PENDING=
+STATISTICS_FILES_TOOLTIP_PENDING=\u0444\u0430\u0439\u043b\u043e\u0432 (\u0438\u043d\u0438\u0446\u0438\u0430\u043b\u0438\u0437\u0430\u0446\u0438\u044f...)
 #### STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_DISCONNECTED=\u041d\u0435\u043f\u043e\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u043e / \u0444\u0430\u0439\u043b\u044b \u043d\u0435 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b
 #### STATISTICS_SHARING_TOOLTIP=You are sharing
-STATISTICS_SHARING_TOOLTIP=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0444\u0430\u0439\u043b\u043e\u0432, \u043a \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0432\u044b \u043e\u0442\u043a\u0440\u044b\u043b\u0438 \u0434\u043e\u0441\u0442\u0443\u043f.
+STATISTICS_SHARING_TOOLTIP=\u041e\u0442\u043a\u0440\u044b\u0442 \u0434\u043e\u0441\u0442\u0443\u043f \u043a
 #### STATISTICS_CONNECTION_DISCONNECTED=Disconnected
 STATISTICS_CONNECTION_DISCONNECTED=\u041d\u0435\u043f\u043e\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u043e
 #### STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
@@ -2022,7 +2022,7 @@ MESSAGE_CONTINUE_DOWNLOAD=\u0412\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u04
 #### MESSAGE_LANG_CHANGE=Please note that you must restart LimeWire for the language to change. Also, make sure that you have the required fonts for the selected language.
 #? MESSAGE_LANG_CHANGE=
 #### MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
-MESSAGE_SENSITIVE_SHARE_TOP=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u043e, \u044d\u0442\u0430 \u043f\u0430\u043f\u043a\u0430 \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442 \u0432\u0430\u0436\u043d\u0443\u044e \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e, \u043a \u043a\u043e\u0442\u043e\u0440\u043e\u0439 \u043d\u0435 \u0441\u043b\u0435\u0434\u0443\u0435\u0442 \u043e\u0442\u043a\u0440\u044b\u0432\u0430\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f: 
+MESSAGE_SENSITIVE_SHARE_TOP=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u043e, \u044d\u0442\u0430 \u043f\u0430\u043f\u043a\u0430 \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442 \u0432\u0430\u0436\u043d\u0443\u044e \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e, \u043a \u043a\u043e\u0442\u043e\u0440\u043e\u0439 \u043d\u0435 \u0441\u043b\u0435\u0434\u0443\u0435\u0442 \u043e\u0442\u043a\u0440\u044b\u0432\u0430\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f:
 #### MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 MESSAGE_SENSITIVE_SHARE_BOTTOM=\u041e\u0442\u043a\u0440\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u044d\u0442\u043e\u0439 \u043f\u0430\u043f\u043a\u0435?
 
@@ -2087,7 +2087,7 @@ ERROR_INTERNAL_TITLE=\u0412\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u044f\u044
 #### ERROR_INTERNAL_SERVLET=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Review' to look at the information that will be sent. Thank you.
 ERROR_INTERNAL_SERVLET=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u0432\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u044f\u044f \u043e\u0448\u0438\u0431\u043a\u0430. LimeWire \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u043d\u043e\u0440\u043c\u0430\u043b\u044c\u043d\u0443\u044e \u0440\u0430\u0431\u043e\u0442\u0443. \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043f\u0440\u043e\u0438\u043d\u0444\u043e\u0440\u043c\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0440\u0430\u0437\u0440\u0430\u0431\u043e\u0442\u0447\u0438\u043a\u043e\u0432 \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435, \u044d\u0442\u043e \u043f\u043e\u043c\u043e\u0436\u0435\u0442 \u0438\u043c \u0432 \u043e\u0442\u043b\u0430\u0434\u043a\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u044b. \u041d\u0430\u0436\u043c\u0438\u0442\u0435 "\u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c" \u0434\u043b\u044f \u043e\u0442\u043f\u0440\u0430\u0432\u043a\u0438 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438 \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435. \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043d\u0430\u0436\u0430\u0442\u044c \u043a\u043d\u043e\u043f\u043a\u0443 "\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c" \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u043e\u0442\u043f\u0440\u0430\u0432\u043b\u044f\u0435\u043c\u0443\u044e \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e. \u0411\u043b\u0430\u0433\u043e\u0434\u0430\u0440\u0438\u043c \u0432\u0430\u0441.
 #### ERROR_INTERNAL_OLD=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To continue using LimeWire, click 'Discard'. If desired, you can click 'Review' to look at the information about the error.
-ERROR_INTERNAL_OLD=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u0432\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u044f\u044f \u043e\u0448\u0438\u0431\u043a\u0430. LimeWire \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u043d\u043e\u0440\u043c\u0430\u043b\u044c\u043d\u0443\u044e \u0440\u0430\u0431\u043e\u0442\u0443. \u0427\u0442\u043e\u0431\u044b \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c, \u043d\u0430\u0436\u043c\u0438\u0442\u0435 "\u0418\u0433\u043d\u043e\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c". \u041d\u0430\u0436\u043c\u0438\u0442\u0435 "\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c" \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435. 
+ERROR_INTERNAL_OLD=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u0432\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u044f\u044f \u043e\u0448\u0438\u0431\u043a\u0430. LimeWire \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u043d\u043e\u0440\u043c\u0430\u043b\u044c\u043d\u0443\u044e \u0440\u0430\u0431\u043e\u0442\u0443. \u0427\u0442\u043e\u0431\u044b \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c, \u043d\u0430\u0436\u043c\u0438\u0442\u0435 "\u0418\u0433\u043d\u043e\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c". \u041d\u0430\u0436\u043c\u0438\u0442\u0435 "\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c" \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435.
 #### ERROR_INTERNAL_SEND=Send
 ERROR_INTERNAL_SEND=\u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c
 #### ERROR_INTERNAL_REVIEW=Review
@@ -2409,7 +2409,7 @@ OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u
 #### OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Folder
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0443 \u043f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e
 #### OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=You can specify a download location for each media type.
-OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=\u0424\u0430\u0439\u043b\u044b \u0440\u0430\u0437\u043b\u0438\u0447\u043d\u043e\u0433\u043e \u0442\u0438\u043f\u0430 \u043c\u043e\u0433\u0443\u0442 \u0441\u043e\u0445\u0440\u0430\u043d\u044f\u0442\u044c\u0441\u044f \u0432 \u043e\u0442\u0434\u0435\u043b\u044c\u043d\u044b\u0435 \u043f\u0430\u043f\u043a\u0438. 
+OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=\u0424\u0430\u0439\u043b\u044b \u0440\u0430\u0437\u043b\u0438\u0447\u043d\u043e\u0433\u043e \u0442\u0438\u043f\u0430 \u043c\u043e\u0433\u0443\u0442 \u0441\u043e\u0445\u0440\u0430\u043d\u044f\u0442\u044c\u0441\u044f \u0432 \u043e\u0442\u0434\u0435\u043b\u044c\u043d\u044b\u0435 \u043f\u0430\u043f\u043a\u0438.
 #### OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Folder
 OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0443
 #### OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
@@ -2451,7 +2451,7 @@ OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=\u041e\u0442\u043a\u0440\u044b\u0432\u0
 #### OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Download Sharing
 #? OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=
 #### OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=You can share files that you download to unshared folders.
-OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u0444\u0430\u0439\u043b\u0430\u043c, \u0437\u0430\u0433\u0440\u0443\u0436\u0435\u043d\u043d\u044b\u043c \u0432 \u043f\u0430\u043f\u043a\u0438 \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0437\u0430\u043a\u0440\u044b\u0442. 
+OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u0444\u0430\u0439\u043b\u0430\u043c, \u0437\u0430\u0433\u0440\u0443\u0436\u0435\u043d\u043d\u044b\u043c \u0432 \u043f\u0430\u043f\u043a\u0438 \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u043a\u043e\u0442\u043e\u0440\u044b\u043c \u0437\u0430\u043a\u0440\u044b\u0442.
 #### OPTIONS_SHARED_NEW_SAVE_FOLDERS=Would you like to share your new save folders? The following new folders will be shared:\n\n
 OPTIONS_SHARED_NEW_SAVE_FOLDERS=\u0412\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u0432\u0430\u0448\u0438\u043c \u043d\u043e\u0432\u044b\u043c \u043f\u0430\u043f\u043a\u0430\u043c \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f? \u0414\u043e\u0441\u0442\u0443\u043f \u0431\u0443\u0434\u0435\u0442 \u043e\u0442\u043a\u0440\u044b\u0442 \u043a \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u043c \u043f\u0430\u043f\u043a\u0430\u043c:\n\n
 
