--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.2
+# Messages Bundle for LimeWire 4.9.11
 # Specialization for: Portuguese - Brazil
 # Thanks to: Waldir Diniz. Additions/fixes by Marcelo Alves.
 ################################################################################
@@ -11,8 +11,12 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Brasileiro
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
-LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brasilian)
+LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brazilian)
+# Before adding a value below, verify the existence of the translation on the NSIS repository:
+# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=PortugueseBR
+# See also other translatable items for the LimeWire installer:
+# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -30,7 +34,14 @@ LAYOUT_RIGHT_TO_LEFT=false
 # Key/value pair for whether or not the tips of the day should be displayed.
 # The default is false (set to true if TOTDs exist).
 ################################################################################
+# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=false
+
+# See also other translatable resources for the application:
+# * translations of meta-data search items:
+# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
+# * translations of "about.html"
+# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
 
 ################################################################################
 ################################################################################
