Change translation of the View menu title from third person conjugated form "Vaata" to the infinitive "Vaade".

--- a/lib/messagebundles/MessagesBundle_et.properties
+++ b/lib/messagebundles/MessagesBundle_et.properties
@@ -395,7 +395,7 @@ MENU_NAV_LIB_MNEMONIC=R
 MENU_NAV_LIB_ACCESSIBLE=Kuva raamatugogu sisu.
 
 #### MENU_VIEW_TITLE=View
-MENU_VIEW_TITLE=Vaata
+MENU_VIEW_TITLE=Vaade
 #### MENU_VIEW_TITLE_MNEMONIC=V
 MENU_VIEW_TITLE_MNEMONIC=V
 #### MENU_VIEW_SMALL_ICONS=Use Small Icons
