Major flaw in spanish translation of "Browse Host"

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -79,7 +79,7 @@ GENERAL_DEFAULT_BUTTON_LABEL=Usar predeterminado
 #### GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_BUTTON_LABEL=Explorar...
 #### GENERAL_BROWSE_HOST_LABEL=Browse Host
-GENERAL_BROWSE_HOST_LABEL=Explorar computadora central
+GENERAL_BROWSE_HOST_LABEL=Explorar Computadora central
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=Ver todos los archivos de la computadora seleccionada.
 #### GENERAL_ADVANCED_SUB_MENU=Advanced
@@ -614,7 +614,7 @@ SEARCH_WISHLIST_BUTTON_LABEL=Incorporar a las sugerencias
 #### SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
 SEARCH_WISHLIST_BUTTON_TIP=Generar un "Robot LimeWire" para buscar los contenidos.
 #### SEARCH_BROWSE_HOST_BUTTON_LABEL=Browse Host
-SEARCH_BROWSE_HOST_BUTTON_LABEL=Computadora central de búsqueda
+SEARCH_BROWSE_HOST_BUTTON_LABEL=Explorar Computadora Central
 #### SEARCH_BROWSE_HOST_BUTTON_TIP=View All Files on Selected Computer
 SEARCH_BROWSE_HOST_BUTTON_TIP=Ver todos los archivos de la computadora seleccionada.
 #### SEARCH_CHAT_BUTTON_LABEL=Chat...
@@ -640,7 +640,7 @@ SEARCH_PUBLIC_LAUNCH_STRING=Iniciar accción
 #### SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_STOP_STRING=Detener la búsqueda
 #### SEARCH_PUBLIC_BROWSE_STRING=Browse Host
-SEARCH_PUBLIC_BROWSE_STRING=Computadora central de búsqueda
+SEARCH_PUBLIC_BROWSE_STRING=Explorar Computadora Central
 #### SEARCH_PUBLIC_CHAT_STRING=Chat With Host
 SEARCH_PUBLIC_CHAT_STRING=Chat con computadora central
 #### SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Lookup File with Bitzi
@@ -1115,7 +1115,7 @@ DOWNLOAD_POPUP_MENU_LAUNCH=Vista Previa
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_CHAT=Chat con la computadora central
 #### DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
-DOWNLOAD_POPUP_MENU_BROWSE=Explorar computadora
+DOWNLOAD_POPUP_MENU_BROWSE=Explorar Computadora Central
 #### DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_PRIORITY_COLUMN=Prioridad
 #### DOWNLOAD_NAME_COLUMN=Name
@@ -4333,7 +4333,7 @@ UPLOAD_STAT_PUSH_PROXY_BAD=Empuje proxy mal formulado
 #### UPLOAD_STAT_PUSH_PROXY_FAILED=Failed Push Proxy
 UPLOAD_STAT_PUSH_PROXY_FAILED=Falló empuje proxy
 #### UPLOAD_STAT_BROWSE_HOST=Browse Host
-UPLOAD_STAT_BROWSE_HOST=Computadora central de búsqueda
+UPLOAD_STAT_BROWSE_HOST=Explorar Computadora Central
 #### UPLOAD_STAT_PUSH_PROXY=Push Proxy
 UPLOAD_STAT_PUSH_PROXY=Empuje de proxy
 #### UPLOAD_STAT_UPDATE_FILE=Update File
