Fixes on PRO banner title. Better translation for "What's new?", used to say "What are the novelties?" now it says "What's new?"

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -243,7 +243,7 @@ GETTING_STARTED_CONTENTS=Para comenzar a usar LimeWire busque el campo de texto 
 # Key/value pairs for the Going Pro image.
 ###################################################################
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
-GOING_PRO_TITLE=¡El programa para compartir archivos más avanzado del planeta!
+GOING_PRO_TITLE=El programa de archivos P2P más rápido del Mundo!
 #### GOING_PRO_DESCRIPTION=Better search results\nTurbo-Charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 GOING_PRO_DESCRIPTION=Mejores resultados de búsqueda\nVelocidad aumentada de descarga\nConexión a más fuentes\nSoporte técnico personalizado\nActualizaciones gratis durante seis meses
 
@@ -680,7 +680,7 @@ AUTO_DL_CHECKBOX_TOOLTIP=LimeWire descargará los archivos por usted
 #### SEARCH_TYPE_KEYWORD=Keyword
 SEARCH_TYPE_KEYWORD=Palabra clave
 #### SEARCH_TYPE_WHATSNEW=What's New
-SEARCH_TYPE_WHATSNEW=¿Cuáles son las novedades?
+SEARCH_TYPE_WHATSNEW=¿Qué hay Nuevo?
 #### SEARCH_TYPE_BROWSEHOST=Direct Connect
 SEARCH_TYPE_BROWSEHOST=Conexión directa
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
@@ -700,7 +700,7 @@ SEARCH_WHATSNEW_TITLE_ONE=¿No sabe
 #### SEARCH_WHATSNEW_TITLE_TWO=What To Look For?
 SEARCH_WHATSNEW_TITLE_TWO=qué se puede buscar?
 #### SEARCH_WHATSNEW_DESC=A "What's New" search will search for files that have been recently added to the network.
-SEARCH_WHATSNEW_DESC="¿Cuáles son las novedades?" busca archivos agregados recientemente a la red.
+SEARCH_WHATSNEW_DESC="¿Qué hay Nuevo?" busca archivos agregados recientemente a la red.
 #### SEARCH_CURRENT_SEARCH=Current Search:
 SEARCH_CURRENT_SEARCH=Búsqueda actual:
 #### SEARCH_WHATS_NEW_SMALL=New
@@ -745,7 +745,7 @@ SEARCH_FOR_KEYWORDS_ACTION_NAME=Buscar por Palabras Clave: {0}
 SEARCH_ACTION_NAME=Buscar for: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
-SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Buscar "Que hay de nuevo?" por: {0}
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Buscar "¿Qué hay Nuevo?" por: {0}
 # {0} the type of the search, e.g. Title, Album, Genre
 # {1} the keywords fo the search, e.g. name of the album
 #### SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
@@ -4175,7 +4175,7 @@ HOPS9=Saltos 9
 
 # Special Query labels
 #### WHAT_IS_NEW_QUERIES=What's New?
-WHAT_IS_NEW_QUERIES=¿Cuáles son las novedades?
+WHAT_IS_NEW_QUERIES=¿Qué hay nuevo?
 
 # TTL labels
 #### TTL0=TTL 0
