--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1070,41 +1070,41 @@ CHAT_YOU=You
 ###################################################################
 # Key/value pairs for splash screen status text
 ###################################################################
-SPLASH_STATUS_RESOURCE_MANAGER=Loading resources...
+SPLASH_STATUS_RESOURCE_MANAGER=Loading Resources...
 SPLASH_STATUS_HTML_ENGINE=Loading HTML Engine...
-SPLASH_STATUS_SEARCH_WINDOW=Loading search window...
-SPLASH_STATUS_OPTIONS_WINDOW=Loading options window...
-SPLASH_STATUS_USER_SETTINGS=Loading user settings...
-SPLASH_STATUS_SHARED_FILES=Loading shared files...
-SPLASH_STATUS_INTERFACE=Loading user interface...
-SPLASH_STATUS_UPDATES=Checking for updates...
-SPLASH_STATUS_CORE_COMPONENTS=Loading core components...
-SPLASH_STATUS_DOWNLOAD_WINDOW=Loading download window...
-SPLASH_STATUS_LIBRARY_WINDOW=Loading library window...
-SPLASH_STATUS_UPLOAD_WINDOW=Loading upload window...
-SPLASH_STATUS_MONITOR_WINDOW=Loading monitor window...
-SPLASH_STATUS_CONNECTION_WINDOW=Loading connection window...
-SPLASH_STATUS_STATISTICS_WINDOW=Loading statistics window...
-SPLASH_STATUS_STATUS_WINDOW=Loading status window...
-SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
-SPLASH_STATUS_MENUS=Loading menus...
-SPLASH_STATUS_MESSAGE_SERVICE=Loading messages...
-SPLASH_STATUS_ICONS=Loading icons...
-SPLASH_STATUS_I18N=Loading internationalization support...
+SPLASH_STATUS_SEARCH_WINDOW=Loading Search Window...
+SPLASH_STATUS_OPTIONS_WINDOW=Loading Options Window...
+SPLASH_STATUS_USER_SETTINGS=Loading Settings...
+SPLASH_STATUS_SHARED_FILES=Loading Shared Files...
+SPLASH_STATUS_INTERFACE=Loading User Interface...
+SPLASH_STATUS_UPDATES=Checking for Updates...
+SPLASH_STATUS_CORE_COMPONENTS=Loading Core Components...
+SPLASH_STATUS_DOWNLOAD_WINDOW=Loading Download Window...
+SPLASH_STATUS_LIBRARY_WINDOW=Loading Library Window...
+SPLASH_STATUS_UPLOAD_WINDOW=Loading Upload Window...
+SPLASH_STATUS_MONITOR_WINDOW=Loading Monitor Window...
+SPLASH_STATUS_CONNECTION_WINDOW=Loading Connections Window...
+SPLASH_STATUS_STATISTICS_WINDOW=Loading Statistics Window...
+SPLASH_STATUS_STATUS_WINDOW=Loading Status Window...
+SPLASH_STATUS_PLAYLIST_WINDOW=Loading Playlist Window...
+SPLASH_STATUS_MENUS=Loading Menus...
+SPLASH_STATUS_MESSAGE_SERVICE=Loading Messages...
+SPLASH_STATUS_ICONS=Loading Icons...
+SPLASH_STATUS_I18N=Loading Internationalization Support...
 SPLASH_STATUS_DAAP=Loading Digital Audio Access Protocol...
-SPLASH_STATUS_COMPONENT_LOADING_ACCEPTOR=Loading connection listener...
-SPLASH_STATUS_COMPONENT_LOADING_MESSAGE_ROUTER=Loading message router...
-SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_MANAGER=Loading connection management...
-SPLASH_STATUS_COMPONENT_LOADING_HOST_CATCHER=Locating peers...
-SPLASH_STATUS_COMPONENT_LOADING_FILE_MANAGER=Loading shared files...
-SPLASH_STATUS_COMPONENT_LOADING_DOWNLOAD_MANAGER_POST_GUI=Loading old downloads...
-SPLASH_STATUS_COMPONENT_LOADING_UPDATE_MANAGER=Checking for updates...
-SPLASH_STATUS_COMPONENT_LOADING_QUERY_UNICASTER=Loading directed querier...
-SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Loading MAGNET listener...
-SPLASH_STATUS_COMPONENT_LOADING_PINGER=Loading peer listener...
-SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Loading stale connection management...
-SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
-SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading secure settings...
+SPLASH_STATUS_COMPONENT_LOADING_ACCEPTOR=Loading Connection Listener...
+SPLASH_STATUS_COMPONENT_LOADING_MESSAGE_ROUTER=Loading Message Router...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_MANAGER=Loading Connection Manager...
+SPLASH_STATUS_COMPONENT_LOADING_HOST_CATCHER=Locating Peers...
+SPLASH_STATUS_COMPONENT_LOADING_FILE_MANAGER=Loading Shared Siles...
+SPLASH_STATUS_COMPONENT_LOADING_DOWNLOAD_MANAGER_POST_GUI=Loading Old Downloads...
+SPLASH_STATUS_COMPONENT_LOADING_UPDATE_MANAGER=Checking for Updates...
+SPLASH_STATUS_COMPONENT_LOADING_QUERY_UNICASTER=Loading Directed Querier...
+SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Loading Magnet Listener...
+SPLASH_STATUS_COMPONENT_LOADING_PINGER=Loading Peer Listener...
+SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Loading Stale Connection Manager...
+SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading Saved Files...
+SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading Secure Settings...
 
 ##################################################################
 # Key/value pairs for the shutdown window
