Made dialog a bit smaller. Localized strings. Added usr, dev, proc and var to directories blacklist.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -877,6 +877,8 @@ SETUP_SCAN_TITLED_BORDER=Scan Hard Drive?
 SETUP_WAIT_TITLE=Scanning Hard Drive
 SETUP_WAIT_PROGRESS_STRING=Scanning Hard Drive...
 SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
+SETUP_WAIT_SCAN_CANCELLED_LABEL=Scan cancelled
+SETUP_WAIT_CANCEL_SCAN_ACTION_NAME=Cancel Scan
 SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below will be shared recursively.
