Added a preference for displaying the tray icon while LimeWire is visible, fixing minor bugs and adding robustness.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -171,7 +171,7 @@ GOING_PRO_DESCRIPTION=Better search results\nTurbo-Charged download speeds\nConn
 ###################################################################
 # Key/value pairs for the Windows system tray
 ###################################################################
-TRAY_TOOLTIP=LimeWire: Running the Gnutella Network
+TRAY_TOOLTIP=LimeWire
 TRAY_RESTORE_LABEL=Restore
 TRAY_ABOUT_LABEL=About
 TRAY_EXIT_LATER_LABEL=Exit after Transfers
@@ -1540,11 +1540,14 @@ OPTIONS_CONNECT_ON_STARTUP_CHECK_BOX_LABEL=Connect on Startup:
 ################################################################################
 # Key/Value pairs for shutdown options
 ################################################################################
-OPTIONS_SHUTDOWN_TITLE=Shutdown Options
+OPTIONS_SHUTDOWN_TITLE=Shutdown Behavior
 OPTIONS_SHUTDOWN_LABEL=You can choose the default shutdown behavior.
 OPTIONS_SHUTDOWN_IMMEDIATELY_LABEL=Shutdown Immediately
 OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=Shutdown after Transfers
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to System Tray
+OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=Show System Tray Icon:
+OPTIONS_TRAY_ICON_DISPLAY_TITLE=System Tray Icon
+OPTIONS_TRAY_ICON_DISPLAY_LABEL=You can display the system tray icon while LimeWire is visible.
 
 ################################################################################
 # Key/Value pairs for update options
