3 messages for system tray icon options

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.9.8
+# Messages Bundle for LimeWire 4.9.21
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -2636,11 +2636,11 @@ OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=Arrêter après les transferts
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to System Tray
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Réduire dans la barre de notification
 #### OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=Show System Tray Icon:
-#? OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=
+OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=Afficher l'icône de notification système\u00a0:
 #### OPTIONS_TRAY_ICON_DISPLAY_TITLE=System Tray Icon
-#? OPTIONS_TRAY_ICON_DISPLAY_TITLE=
+OPTIONS_TRAY_ICON_DISPLAY_TITLE=Icône de notification système
 #### OPTIONS_TRAY_ICON_DISPLAY_LABEL=You can display the system tray icon while LimeWire is visible.
-#? OPTIONS_TRAY_ICON_DISPLAY_LABEL=
+OPTIONS_TRAY_ICON_DISPLAY_LABEL=Vous pouvez continuer d'afficher l'icône dans la zone de notification système lorsque la fenêtre de LimeWire est visible.
 
 ################################################################################
 # Key/Value pairs for update options
