Rename the 'Shutdown' options pane to 'System Tray', since both pane items have to do with the system tray, not shutdown.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1340,7 +1340,7 @@ OPTIONS_UPLOAD_MAIN_TITLE=Uploads
 OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basic
 OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=Slots
 OPTIONS_CONNECTIONS_MAIN_TITLE=Connections
-OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
+OPTIONS_SHUTDOWN_MAIN_TITLE=System Tray
 OPTIONS_UPDATE_MAIN_TITLE=Updates
 OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_PLAYER_MAIN_TITLE=Player
