Fix non-localized String in TipOfTheDayMediator

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -155,6 +155,7 @@ TOTD_SHOW_AT_STARTUP=Show Tips At Startup
 TOTD_NEXT=Next Tip
 TOTD_PREVIOUS=Previous Tip
 TOTD_CLOSE=Close
+TOTD_LOADING_TIPS="Loading tips..."
 
 ###################################################################
 # Key/value pairs for the Getting Started image
