--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -230,8 +230,8 @@ TOTD_NEXT=Suivante
 TOTD_PREVIOUS=Précédente
 #### TOTD_CLOSE=Close
 TOTD_CLOSE=Fermer
-#### TOTD_LOADING_TIPS="Loading tips..."
-#? TOTD_LOADING_TIPS=
+#### TOTD_LOADING_TIPS=Loading tips...
+TOTD_LOADING_TIPS=Chargement des astuces du jour...
 
 ###################################################################
 # Key/value pairs for the Getting Started image
