Icon Tray messages translated.

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -231,7 +231,7 @@ TOTD_PREVIOUS=Consejo anterior
 #### TOTD_CLOSE=Close
 TOTD_CLOSE=Cerrar
 #### TOTD_LOADING_TIPS=Loading tips...
-#? TOTD_LOADING_TIPS=
+TOTD_LOADING_TIPS=Cargando consejos...
 
 ###################################################################
 # Key/value pairs for the Getting Started image
@@ -2638,11 +2638,11 @@ OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=Cerrar luego de las transferencias
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to System Tray
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimizar a la bandeja del sistema
 #### OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=Show System Tray Icon:
-#? OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=
+OPTIONS_TRAY_ICON_DISPLAY_CHECK_BOX_LABEL=Mostrar ícono en bandeja del sistema
 #### OPTIONS_TRAY_ICON_DISPLAY_TITLE=System Tray Icon
-#? OPTIONS_TRAY_ICON_DISPLAY_TITLE=
+OPTIONS_TRAY_ICON_DISPLAY_TITLE=Ícono en bandeja del sistema
 #### OPTIONS_TRAY_ICON_DISPLAY_LABEL=You can display the system tray icon while LimeWire is visible.
-#? OPTIONS_TRAY_ICON_DISPLAY_LABEL=
+OPTIONS_TRAY_ICON_DISPLAY_LABEL=Puede mostrar el icono de LimeWire en la bandeja del sistema mientras el programa está visible.
 
 ################################################################################
 # Key/Value pairs for update options
