Add option to filter windows media files (.wmv/.asf)

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -2945,11 +2945,11 @@ OPTIONS_IGNORE_RESULT_TYPES_LABEL=Vous pouvez spécifier des types généraux de ré
 #### OPTIONS_IGNORE_RESULT_TYPES_ADULT_BOX_LABEL=Ignore Adult Content
 OPTIONS_IGNORE_RESULT_TYPES_ADULT_BOX_LABEL=Ignorer les contenus pour adultes
 #### OPTIONS_IGNORE_RESULT_TYPES_HTML_BOX_LABEL=Ignore .htm/.html Files
-OPTIONS_IGNORE_RESULT_TYPES_HTML_BOX_LABEL=Ignorer les pages .htm/.html
+OPTIONS_IGNORE_RESULT_TYPES_HTML_BOX_LABEL=Ignorer les pages internet (.htm/.html)
 #### OPTIONS_IGNORE_RESULT_TYPES_VBS_BOX_LABEL=Ignore .vbs Files
-OPTIONS_IGNORE_RESULT_TYPES_VBS_BOX_LABEL=Ignorer les scripts .vbs
+OPTIONS_IGNORE_RESULT_TYPES_VBS_BOX_LABEL=Ignorer les scripts Visual Basic (.vbs)
 #### OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=Ignore .wmv/.asf files
-#? OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=
+OPTIONS_IGNORE_RESULT_TYPES_WMV_ASF_BOX_LABEL=Ignorer les contenus Windows Media (.wmv/.asf)
 
 ################################################################################
 # Key/Value pairs for message filtering options in the options window
